# drf-api-key

./: .gitignore  Makefile  README.md  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
docs/: guide.md  index.md  security.md
src/drf_api_key/: __init__.py  admin.py  apps.py  crypto.py  models.py  permissions.py
src/drf_api_key/locale/en/LC_MESSAGES/: django.po
src/drf_api_key/locale/hu/LC_MESSAGES/: django.po
src/drf_api_key/migrations/: 0001_initial.py  0002_alter_apikey_created_alter_apikey.py
test_project/: drf_api_key  manage.py
test_project/heroes/: admin.py  models.py  permissions.py
test_project/heroes/migrations/: 0001_initial.py
test_project/locale/en/LC_MESSAGES/: django.po
test_project/locale/hu/LC_MESSAGES/: django.po
test_project/project/: settings.py
tests/: conftest.py  test_admin.py  test_checks.py  test_compatibility.py  test_legacy_key_generator.py  test_migrations.py  test_model.py  test_permissions.py  test_permissions_combination.py  test_permissions_custom.py  test_test_project.py
tools/: makemigrations.py
