[metadata]
name = Django Rest Framework API Key
url = https://github.com/JITdev/drf-api-key/tree/main
author = JITdev
author_email = justintimedev@gmail.com
description = Customized DRF API key implementation.
long_description = file: README.md

[flake8]
format = wemake
max-line-length = 110
max-doc-length = 80
max-imports = 15
max-module-members = 15
max-returns = 2
max-arguments = 6
max-expressions = 12
max-methods = 12
max-line-complexity = 20
max-cognitive-average = 20
max-cognitive-score = 21
max-local-variables = 10
max-string-usages = 10
doctests = True
docstring-convention = google
exclude =
    build,
    .git,
    .tox,
    .env,
    __pycache__,
    */conf.py,
    */__init__.py,
    */migrations/0001_initial.py
ignore = W504, WPS305
per-file-ignores =
    */commands/*.py: A003, WPS110, WPS125, WPS226
    */*factory.py: WPS226, RST210
    */migrations/*.py: A, D, E, I, P, WPS
    */models*: WPS110, WPS115, WPS125, WPS202, WPS211, WPS214, WPS226, WPS306, WPS323, WPS347, WPS431, WPS432, WPS601, WPS602, WPS615, D106


[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
known_first_party = core, apps
known_third_party = django, rest_framework
line_length = 110
multi_line_output = 5

[darglint]
strictness=short

[mypy]
plugins = mypy_django_plugin.main, mypy_drf_plugin.main
ignore_missing_imports = True
strict_optional = False
exclude = ['core/serializers.py', 'docs/app_template/*']

[mypy.plugins.django-stubs]
django_settings_module = 'core.settings.dev'

[mypy-docs.*]
ignore_errors = True

[mypy-core.serializers]
ignore_errors = True

[mypy-core.metadata]
ignore_errors = True

[tool:pytest]
testpaths = tests
addopts =
  -rxXs
  --cov=rest_framework_api_key
  --cov=tests
  --cov-report=term-missing
  --cov-fail-under=100
